--- a/opals/css/main.css
+++ b/opals/css/main.css
@@ -86,7 +86,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    background-image: url('../SVG/delete.svg');
+    background-image: url('../svg/delete.svg');
     z-index: 1003;
   }
   #snapshot{
@@ -96,7 +96,7 @@
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
-   background-image: url('../SVG/snapshot.svg');
+   background-image: url('../svg/snapshot.svg');
    z-index: 1003;
 
  }
@@ -107,7 +107,7 @@
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
-   background-image: url('../SVG/rotateBottle.svg');
+   background-image: url('../svg/rotateBottle.svg');
    z-index: 1003;
 
  }
@@ -118,7 +118,7 @@
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
-   background-image: url('../SVG/snapshot.svg');
+   background-image: url('../svg/snapshot.svg');
    z-index: 1003;
 
  }
@@ -207,7 +207,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/changeColorSmall.png');
+  background-image: url('../svg/Tooltips/changeColorSmall.png');
   z-index: 1003;
 }
 #tutorial #addtextChange{
@@ -220,7 +220,7 @@
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
- background-image: url('../SVG/Tooltips/addTextSmall.png');
+ background-image: url('../svg/Tooltips/addTextSmall.png');
  z-index: 1003;
 
 }
@@ -234,7 +234,7 @@
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
- background-image: url('../SVG/Tooltips/addImagesSmall.png');
+ background-image: url('../svg/Tooltips/addImagesSmall.png');
  z-index: 1003;
 
 }
@@ -248,7 +248,7 @@
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
- background-image: url('../SVG/Tooltips/tooltipSidebarRightSmall.png');
+ background-image: url('../svg/Tooltips/tooltipSidebarRightSmall.png');
  z-index: 1003;
 
 }
@@ -283,7 +283,7 @@
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
-   background-image: url('../SVG/Tooltips/tooltipsSnapshot.png');
+   background-image: url('../svg/Tooltips/tooltipsSnapshot.png');
    z-index: 1003;
 
  }
@@ -318,7 +318,7 @@
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
-   background-image: url('../SVG/Tooltips/changeColor.png');
+   background-image: url('../svg/Tooltips/changeColor.png');
    z-index: 1003;
  }
  #tutorial #addtextChange{
@@ -331,7 +331,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/addText.png');
+  background-image: url('../svg/Tooltips/addText.png');
   z-index: 1003;
 
 }
@@ -345,7 +345,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/addImages.png');
+  background-image: url('../svg/Tooltips/addImages.png');
   z-index: 1003;
 
 }
@@ -364,7 +364,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/tooltipsSidebarRight.png');
+  background-image: url('../svg/Tooltips/tooltipsSidebarRight.png');
   z-index: 1003;
 
 }
@@ -378,7 +378,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/tooltipsSnapshot.png');
+  background-image: url('../svg/Tooltips/tooltipsSnapshot.png');
   z-index: 1003;
 
 }
@@ -395,7 +395,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/textColor.png');
+  background-image: url('../svg/Tooltips/textColor.png');
   z-index: 1003;
 
 }
@@ -409,7 +409,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/textAlign.png');
+  background-image: url('../svg/Tooltips/textAlign.png');
   z-index: 1003;
 
 }
@@ -423,7 +423,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/moveLayers.png');
+  background-image: url('../svg/Tooltips/moveLayers.png');
   z-index: 1003;
 
 }
@@ -437,7 +437,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/chooseFont.png');
+  background-image: url('../svg/Tooltips/chooseFont.png');
   z-index: 1003;
 
 }
@@ -451,7 +451,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/Tooltips/finalButton.png');
+  background-image: url('../svg/Tooltips/finalButton.png');
   z-index: 1003;
 
 }
@@ -545,7 +545,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-image: url('../SVG/designLogo.svg');
+  background-image: url('../svg/designLogo.svg');
 }
 #lowerBackground{
   background-color: #fafafa;
@@ -686,27 +686,27 @@ path#logo {
   box-shadow: 2px 2px 1px rgba(0,0,0,.5);
 }
 #bottlePick, #lidPick, #capPick, #overmoldPick {
-  background-image: url('../SVG/graywheel.svg');
+  background-image: url('../svg/graywheel.svg');
 }
 
 #imagePick {
-  background-image: url('../SVG/grayimage.svg');
+  background-image: url('../svg/grayimage.svg');
 }
 
 #textPick {
-  background-image: url('../SVG/graytext.svg');
+  background-image: url('../svg/graytext.svg');
 }
 
 .selected #bottlePick, .selected #lidPick, .selected #capPick, .selected #overmoldPick {
-  background-image: url('../SVG/colorwheel.svg');
+  background-image: url('../svg/colorwheel.svg');
 }
 
 .selected #imagePick {
-  background-image: url('../SVG/colorimage.svg');
+  background-image: url('../svg/colorimage.svg');
 }
 
 .selected #textPick {
-  background-image: url('../SVG/colortext.svg');
+  background-image: url('../svg/colortext.svg');
 }
 
 #textControlsPicker {
@@ -774,43 +774,43 @@ path#logo {
 }
 
 .selected #fontPick {
-  background-image: url('../SVG/colortextbig.svg');
+  background-image: url('../svg/colortextbig.svg');
 }
 
 .selected #colorPick {
-  background-image: url('../SVG/colorwheelbig.svg');
+  background-image: url('../svg/colorwheelbig.svg');
 }
 
 .selected #alignPick {
-  background-image: url('../SVG/coloralign.svg');
+  background-image: url('../svg/coloralign.svg');
 }
 
 .selected #layersPick {
-  background-image: url('../SVG/colorlayers.svg');
+  background-image: url('../svg/colorlayers.svg');
 }
 
 .selected #artPick {
-  background-image: url('../SVG/colorart.svg');
+  background-image: url('../svg/colorart.svg');
 }
 
 #artPick {
-  background-image: url('../SVG/grayart.svg');
+  background-image: url('../svg/grayart.svg');
 }
 
 #fontPick {
-  background-image: url('../SVG/graytextbig.svg');
+  background-image: url('../svg/graytextbig.svg');
 }
 
 #colorPick {
-  background-image: url('../SVG/graywheelbig.svg');
+  background-image: url('../svg/graywheelbig.svg');
 }
 
 #alignPick {
-  background-image: url('../SVG/grayalign.svg');
+  background-image: url('../svg/grayalign.svg');
 }
 
 #layersPick {
-  background-image: url('../SVG/graylayers.svg');
+  background-image: url('../svg/graylayers.svg');
 }
 
 
@@ -847,19 +847,19 @@ path#logo {
 }
 
 .alignLeft {
-  background-image: url('../SVG/left.svg');
+  background-image: url('../svg/left.svg');
 }
 
 .alignCenter {
-  background-image: url('../SVG/center.svg');
+  background-image: url('../svg/center.svg');
 }
 
 .alignRight {
-  background-image: url('../SVG/right.svg');
+  background-image: url('../svg/right.svg');
 }
 
 .alignJustify {
-  background-image: url('../SVG/justify.svg');
+  background-image: url('../svg/justify.svg');
 }
 
 .lineHeightLabel {
@@ -904,19 +904,19 @@ path#logo {
 }
 
 .moveBack {
-  background-image: url('../SVG/backward.svg');
+  background-image: url('../svg/backward.svg');
 }
 
 .moveToBack {
-  background-image: url('../SVG/toback.svg');
+  background-image: url('../svg/toback.svg');
 }
 
 .moveToFront {
-  background-image: url('../SVG/tofront.svg');
+  background-image: url('../svg/tofront.svg');
 }
 
 .moveForward {
-  background-image: url('../SVG/forward.svg');
+  background-image: url('../svg/forward.svg');
 }
 
 
@@ -1182,7 +1182,7 @@ p.selected {
 }
 .colorPalette .eyedropper{
   background-color: #b8e81d;
-  background-image: url('../SVG/eyedropper.svg');
+  background-image: url('../svg/eyedropper.svg');
   background-position: center;
   background-repeat: no-repeat;
 }
